@@ -147,4 +147,13 @@ for (i = 0; i < 256; i++)
 return yield;
 }
 
+PCRE2_EXP_DEFN void PCRE2_CALL_CONVENTION
+pcre2_maketables_free(pcre2_general_context *gcontext, const uint8_t *tables)
+{
+  if (gcontext)
+    gcontext->memctl.free((void *)tables, gcontext->memctl.memory_data);
+  else
+    free((void *)tables);
+}
+
 /* End of pcre2_maketables.c */
